# alpha-zero-general

./: .gitignore  Arena.py  Coach.py  MCTS.py  NeuralNet.py  README.md  main.py  pyproject.toml  requirements.txt  setup_env.sh  type.py  types.py
alpha_zero_general/: Arena.py  Coach.py  Game.py  MCTS.py  NeuralNet.py  __init__.py  arena.py  coach.py  game.py  main.py  mcts.py  neural_net.py  pit.py  player.py  py313_functions.py  type.py  utils.py
alpha_zero_general/connect4/: Connect4Game.py  Connect4Logic.py  Connect4Players.py  __init__.py  connect4_game.py  connect4_logic.py  connect4_players.py  test_connect4.py
alpha_zero_general/connect4/keras/: Connect4NNet.py  NNet.py  connect4_n_net.py  n_net.py
alpha_zero_general/dots_and_boxes/: __init__.py  dots_and_boxes_game.py  dots_and_boxes_logic.py  dots_and_boxes_players.py  dots_and_boxes_server.py  dots_and_boxes_test.py  main-dots_and_boxes.py.py  main-dotsandboxes.py  pit-dots_and_boxes.py  pit-dotsandboxes.py  pit_dots_and_boxes.py.py
alpha_zero_general/dots_and_boxes/keras/: dots_and_boxes_n_net.py  n_net.py
alpha_zero_general/dotsandboxes/: DotsAndBoxesGame.py  DotsAndBoxesLogic.py  DotsAndBoxesPlayers.py  DotsAndBoxesServer.py  dots_and_boxes_game.py  dots_and_boxes_logic.py  dots_and_boxes_players.py  dots_and_boxes_server.py  dots_and_boxes_test.py  main-dotsandboxes.py  pit-dotsandboxes.py
alpha_zero_general/dotsandboxes/keras/: DotsAndBoxesNNet.py  NNet.py  n_net.py
alpha_zero_general/gobang/: GobangGame.py  GobangLogic.py  GobangPlayers.py  __init__.py  gobang_game.py  gobang_logic.py  gobang_players.py
alpha_zero_general/gobang/keras/: GobangNNet.py  NNet.py  gobang_n_net.py  n_net.py
alpha_zero_general/othello/: OthelloGame.py  OthelloLogic.py  OthelloPlayers.py  __init__.py  othello_game.py  othello_logic.py  othello_players.py
alpha_zero_general/othello/keras/: NNet.py  OthelloNNet.py  n_net.py  othello_n_net.py
alpha_zero_general/othello/pytorch/: NNet.py  OthelloNNet.py  n_net.py  othello_n_net.py
alpha_zero_general/rts/: RTSGame.py  RTSPlayers.py  learn.py  pit.py  rts_game.py  rts_players.py
alpha_zero_general/rts/keras/: NNet.py  RTSNNet.py  n_net.py  rtsn_net.py
alpha_zero_general/rts/src/: Board.py  board.py  config.py  config_class.py  encoders.py
alpha_zero_general/rts/visualization/: rts_pygame.py  rts_ue4.py
alpha_zero_general/santorini/: SantoriniGame.py  SantoriniLogic.py  __init__.py  santorini_game.py  santorini_logic.py  santorini_players.py
alpha_zero_general/tafl/: TaflGame.py  TaflLogic.py  TaflPlayers.py  __init__.py  digits.py  game_variants.py  main-tafl.py  mainTafl.py  main_tafl.py  pit-tafl.py  pitTafl.py  pit_tafl.py  tafl_game.py  tafl_logic.py  tafl_players.py
alpha_zero_general/tafl/keras/: NNet.py  TaflNNet.py  n_net.py  tafl_n_net.py
alpha_zero_general/tafl/pytorch/: NNet.py  TaflNNet.py  n_net.py  tafl_n_net.py
alpha_zero_general/tic_tac_toe/: __init__.py  tic_tac_toe_game.py  tic_tac_toe_logic.py  tic_tac_toe_players.py
alpha_zero_general/tic_tac_toe/keras/: n_net.py  tic_tac_toe_n_net.py
alpha_zero_general/tic_tac_toe_3d/: __init__.py  tic_tac_toe_3d_game.py  tic_tac_toe_3d_logic.py  tic_tac_toe_3d_players.py  tic_tac_toe_game.py  tic_tac_toe_logic.py
alpha_zero_general/tic_tac_toe_3d/keras/: n_net.py  tic_tac_toe_3d_n_net.py
alpha_zero_general/tictactoe/: TicTacToeGame.py  TicTacToePlayers.py  tic_tac_toe_game.py  tic_tac_toe_players.py
alpha_zero_general/tictactoe/keras/: NNet.py  TicTacToeNNet.py  n_net.py  tic_tac_toe_n_net.py
alpha_zero_general/tictactoe_3d/: TicTacToeGame.py  TicTacToeLogic.py  tic_tac_toe_game.py  tic_tac_toe_players.py
alpha_zero_general/tictactoe_3d/keras/: NNet.py  TicTacToeNNet.py  n_net.py  tic_tac_toe_n_net.py
chore/: make-poetry-package.zsh
connect4/: Connect4Game.py  Connect4Logic.py
connect4/keras/: Connect4NNet.py
doc/log/: 241023-loose-ref-log.md
docker/: jupyter_notebook_config.py
dotsandboxes/: DotsAndBoxesGame.py
dotsandboxes/keras/: DotsAndBoxesNNet.py  NNet.py
gobang/: GobangLogic.py
scripts/: lint.py
scripts/single-use/: find-top-level-deps.sh  rename-python-source.sh
tests/: test_all_games.py  test_arena.py  test_coach.py  test_connect4.py  test_dots_and_boxes.py  test_dotsandboxes.py  test_gobang.py  test_mcts.py  test_neural_net.py  test_neuralnet.py  test_othello.py  test_santorini.py  test_tic_tac_toe.py  test_tictactoe.py
