[tool.poetry]
name = "alpha-zero-general"
version = "0.1.0"
description = ""
authors = ["PabloLION <36828324+PabloLION@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.scripts]
test = "pytest:main"
format = "black:main"
lint = "scripts.lint:run_lint"


[tool.poetry.dependencies]
python = "^3.11"
grpcio = "1.66.2"
tensorboard-plugin-wit = "1.8.1"
absl-py = "1.1.0"
astunparse = "1.6.3"
cachetools = "5.2.0"
certifi = "^2024.8.30"
charset-normalizer = "2.0.12"
coloredlogs = "15.0.1"
flatbuffers = "24.3.25"
gast = "0.4.0"
google-auth = "2.8.0"
google-auth-oauthlib = "0.4.6"
google-pasta = "0.2.0"
humanfriendly = "10.0"
idna = "3.3"
importlib-metadata = "4.11.4"
keras = "3.6.0"
keras-preprocessing = "1.1.2"
libclang = "14.0.1"
markdown = "3.3.7"
numpy = "^2.0.0"
oauthlib = "3.2.0"
opt-einsum = "3.3.0"
protobuf = "5.28.2"
pyasn1 = "0.4.8"
pyasn1-modules = "0.2.8"
pyparsing = "3.0.9"
requests = "2.28.0"
requests-oauthlib = "1.3.1"
rsa = "4.8"
six = "1.16.0"
tensorboard = "2.18.0"
tensorboard-data-server = "0.7.2"
tensorflow-estimator = "2.9.0"
termcolor = "1.1.0"
tqdm = "4.64.0"
typing-extensions = "4.12.2"
urllib3 = "1.26.9"
werkzeug = "2.1.2"
wrapt = "1.14.1"
zipp = "3.8.0"
h5py = "^3.12.1"
tensorflow = "2.18.0rc2"
torch = "^2.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-mock = "^3.14.0"
packaging = "^24.1"
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
pylint = "^3.3.1"
autoflake = "^2.3.1"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88 # Set the maximum allowed line length
# Target Python version(s) will be inferred from the environment
include = '\.pyi?$' # Specify files to include
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
''' # Specify files or directories to exclude

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
